Sicong | #3531 | Fix: when turn on both of autocomplete, multi-select and addmore on "Cheif Complain" obs, add more button is covered by textbox.
* The reason is the obs-control-select-wrapper set to be a 197px and the inner select-control with multi select has a longer width(275px), so the add more button will sit beside 197px, not with 275px.

--- a/styles/common/_grid.scss
+++ b/styles/common/_grid.scss
@@ -31,7 +31,6 @@
 
 .form-builder-canvas, .form-builder-row {
   .obs-control-select-wrapper {
-    width: 197px !important;
     display: inline-block !important;
     box-sizing: border-box;
     float: left;
@@ -49,6 +48,7 @@
     }
   }
   .Select-control {
+    width: 197px;
     height: 25px;
     .Select-placeholder, .Select-value {
       line-height: 24px;
